--- a/core/src/main/res/values-fi/strings.xml
+++ b/core/src/main/res/values-fi/strings.xml
@@ -28,9 +28,6 @@
   <!--Google Assistant-->
   <!--SwipeActions-->
   <!--Statistics fragment-->
-  <string name="statistics_details_dialog">%1$d jakso %2$d:sta aloitettu.\n\nSoitettu %3$s jaksoa %4$s:sta.</string>
-  <string name="statistics_mode">Tilastointitila</string>
-  <string name="statistics_mode_normal">Laske oikeasti soitettu aikamäärä. Uudelleensoitto lasketaan kahdesti, mutta soitetuksi merkattua ei lasketa.</string>
   <string name="statistics_speed_not_counted">Huomio: Soittonopeutta ei lasketa mukaan.</string>
   <string name="statistics_reset_data">Nollaa tilastotiedot</string>
   <string name="statistics_reset_data_msg">Tämä poistaa kaikkien jaksojen soiton keston historian. Haluatko varmasti jatkaa?</string>
@@ -84,9 +81,8 @@
   <string name="parallel_downloads">%1$d yhtäaikaista latausta</string>
   <string name="feed_auto_download_global">Globaali oletus</string>
   <string name="feed_auto_download_always">Aina</string>
-  <string name="feed_auto_download_never">Ei koskaan</string>
+  <string name="never">Ei koskaan</string>
   <string name="send_label">Lähetä...</string>
-  <string name="episode_cleanup_never">Ei koskaan</string>
   <string name="episode_cleanup_except_favorite_removal">Kun ei ole suosikeissa</string>
   <string name="episode_cleanup_queue_removal">Kun ei ole jonossa</string>
   <string name="episode_cleanup_after_listening">Lopetuksen jälkeen</string>
