--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -22,8 +22,6 @@
   <string name="episode_cache_full_message">एपिसोड कैश सीमा तक पहुंच गया है। आप सेटिंग में कैश का आकार बढ़ा सकते हैं।</string>
   <!--Statistics fragment-->
   <string name="total_time_listened_to_podcasts">चलाये गए पॉडकास्ट का कुल समय:</string>
-  <string name="statistics_details_dialog">%2$d में से %1$d एपिसोड शुरू किए गए है.\n\n%4$s में से %3$sपूरे हुए है। </string>
-  <string name="statistics_mode_normal">वास्तव में चलाई गयी अवधि की गणना करें। दो बार चलने पर दो बार गिना जायेगा, जबकि चल चूका सा चिह्नितो को नही गिना जायेगा।</string>
   <string name="statistics_speed_not_counted">सूचना: प्लेबैक गति को कभी भी ध्यान में नहीं रखा जाता है।</string>
   <!--Download Statistics fragment-->
   <!--Main activity-->
@@ -69,9 +67,8 @@
   <string name="auto_delete_label">ऑटो डिलीट एपिसोड</string>
   <string name="feed_auto_download_global">सार्वभौमिक डिफ़ॉल्ट</string>
   <string name="feed_auto_download_always">हमेशा</string>
-  <string name="feed_auto_download_never">कभी नहीँ</string>
+  <string name="never">कभी नहीँ</string>
   <string name="send_label">भेजें...</string>
-  <string name="episode_cleanup_never">कभी नहीँ</string>
   <string name="episode_cleanup_queue_removal">जब क़तार में नहीं हो</string>
   <string name="episode_cleanup_after_listening">समाप्ति के बाद</string>
   <plurals name="episode_cleanup_days_after_listening">
@@ -289,8 +286,6 @@
   <string name="swipe_left">स्वाइप लेफ्ट</string>
   <string name="enable_swipeactions">इस स्क्रीन के लिए स्वाइप क्रियाएं सक्षम करें</string>
   <string name="change_setting">परिवर्तन</string>
-  <string name="statistics_mode">सांख्यिकी मोड</string>
-  <string name="statistics_mode_count_all">खेले गए सभी एपिसोड को योग करें</string>
   <string name="statistics_reset_data_msg">यह सभी एपिसोड के लिए निभाई अवधि के इतिहास को मिटा देगा। क्या आप सुनिश्चित हैं कि आप आगे बढ़ना चाहते हैं?</string>
   <string name="statistics_reset_data">सांख्यिकी डेटा रीसेट करें</string>
     <string name="statistics_counting_since">क्योंकि %s, \\nआप खेला</string>
