--- a/core/src/main/res/values-it/strings.xml
+++ b/core/src/main/res/values-it/strings.xml
@@ -37,10 +37,6 @@
   <string name="change_setting">Modifica</string>
   <!--Statistics fragment-->
   <string name="total_time_listened_to_podcasts">Tempo totale episodi riprodotti:</string>
-  <string name="statistics_details_dialog">%1$d di %2$d episodi iniziati.\n\nRiprodotti %3$s di %4$s.</string>
-  <string name="statistics_mode">Modalità di calcolo</string>
-  <string name="statistics_mode_normal">Tempo di riproduzione reale. Riprodurre due volte un episodio verrà contato doppio, segnarlo come riprodotto no</string>
-  <string name="statistics_mode_count_all">Somma tutti gli episodi segnati come riprodotti</string>
   <string name="statistics_speed_not_counted">Avviso: la velocità di riproduzione non viene considerata.</string>
   <string name="statistics_reset_data">Resetta statistiche</string>
   <string name="statistics_reset_data_msg">Verranno eliminate le statistiche sul tempo di riproduzione di tutti gli episodi. Procedo?</string>
@@ -100,9 +96,8 @@
   <string name="parallel_downloads">%1$d download paralleli</string>
   <string name="feed_auto_download_global">Predefinita globale</string>
   <string name="feed_auto_download_always">Sempre</string>
-  <string name="feed_auto_download_never">Mai</string>
+  <string name="never">Mai</string>
   <string name="send_label">Invia...</string>
-  <string name="episode_cleanup_never">Mai</string>
   <string name="episode_cleanup_except_favorite_removal">Quando non Preferito</string>
   <string name="episode_cleanup_queue_removal">Quando non è in coda</string>
   <string name="episode_cleanup_after_listening">Dopo il completamento</string>
