--- a/core/src/main/res/values-ko/strings.xml
+++ b/core/src/main/res/values-ko/strings.xml
@@ -30,10 +30,6 @@
   <!--SwipeActions-->
   <!--Statistics fragment-->
   <string name="total_time_listened_to_podcasts">재생한 에피소드 총 시간:</string>
-  <string name="statistics_details_dialog">에피소드 %1$d개 (전체 %2$d개) 시작.\n\n%3$s개 재생 (전체 %4$s개).</string>
-  <string name="statistics_mode">통계 모드</string>
-  <string name="statistics_mode_normal">실제 재생한 시간을 계산합니다. 두 번 재생하면 두 번 계산되고, 재생한 것으로 표시하면 계산에 안 들어갑니다.</string>
-  <string name="statistics_mode_count_all">재생했다고 표시한 모든 에피소드의 합</string>
   <string name="statistics_speed_not_counted">주의: 재생 속도는 고려하지 않습니다</string>
   <string name="statistics_reset_data">통계 데이터 초기화</string>
   <string name="statistics_reset_data_msg">모든 에피소드의 재생 시간 기록을 지웁니다. 정말로 계속 하시겠습니까?</string>
@@ -88,9 +84,8 @@
   <string name="parallel_downloads">%1$d개 병렬 다운로드</string>
   <string name="feed_auto_download_global">전체 기본값</string>
   <string name="feed_auto_download_always">항상</string>
-  <string name="feed_auto_download_never">안 함</string>
+  <string name="never">안 함</string>
   <string name="send_label">보내기…</string>
-  <string name="episode_cleanup_never">안 함</string>
   <string name="episode_cleanup_except_favorite_removal">즐겨찾기 아닐 때</string>
   <string name="episode_cleanup_queue_removal">대기열에 없을 때</string>
   <string name="episode_cleanup_after_listening">끝나고 나서</string>
