--- a/core/src/main/res/values-pt/strings.xml
+++ b/core/src/main/res/values-pt/strings.xml
@@ -37,10 +37,6 @@
   <string name="change_setting">Alterar</string>
   <!--Statistics fragment-->
   <string name="total_time_listened_to_podcasts">Tempo total dos episódios reproduzidos:</string>
-  <string name="statistics_details_dialog">%1$d de %2$d episódios iniciados.\n\nReproduzidos %3$s de %4$s.</string>
-  <string name="statistics_mode">Modo estatístico</string>
-  <string name="statistics_mode_normal">Calcula a duração dos podcasts reproduzidos. Se os reproduzir duas vezes, serão contados duas vezes mas se os marcar como reproduzidos não serão contados.</string>
-  <string name="statistics_mode_count_all">Soma todos os episódios que tenham sido marcados como reproduzidos</string>
   <string name="statistics_speed_not_counted">Aviso: a velocidade de reprodução nunca será considerada.</string>
   <string name="statistics_reset_data">Reiniciar estatísticas dos dados</string>
   <string name="statistics_reset_data_msg">Isto irá apagar o histórico do tempo de reprodução para todos os episódios. Tem a certeza de que deseja continuar?</string>
@@ -100,9 +96,8 @@
   <string name="parallel_downloads">%1$d descargas em simultâneo</string>
   <string name="feed_auto_download_global">Predefinições</string>
   <string name="feed_auto_download_always">Sempre</string>
-  <string name="feed_auto_download_never">Nunca</string>
+  <string name="never">Nunca</string>
   <string name="send_label">Enviar...</string>
-  <string name="episode_cleanup_never">Nunca</string>
   <string name="episode_cleanup_except_favorite_removal">Se não for favorito</string>
   <string name="episode_cleanup_queue_removal">Se não estiver na fila</string>
   <string name="episode_cleanup_after_listening">Ao terminar</string>
